k8s/ingress/grading-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grading-ingress
  namespace: api-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - api.touchit.com.ng
      secretName: grading-tls
  rules:
    - host: api.touchit.com.ng
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sinnts-grading
                port:
                  number: 80
